# cursorflow-rs

./: Cargo.toml  LICENSE  README.md
src/: config.rs  generator.rs  lib.rs  main.rs  style.rs  trajectory.rs
